Merge pull request #103 in DATA/nifi from ORCHSYM-2845_upgrade_nifi_1.7.1 to master
Squashed commit of the following:

commit 380df8b8807a8ddcc42ac7d9f63c7839cb0784e9
Author: GU Guoqiang <guoqiang.gu@baishancloud.com>
Date:   Fri Jan 4 19:23:32 2019 +0800

    还原注释掉打包

commit 0753e27ba0468b53207859681b4b4024dce97db0
Author: GU Guoqiang <guoqiang.gu@baishancloud.com>
Date:   Wed Dec 26 17:56:44 2018 +0800

    ORCHSYM-2845: 更新组件属性中文翻译

commit 9ba056e95df473fd19e4c3e8fa5d8385130d854f
Merge: 00148bf b904923
Author: GU Guoqiang <guoqiang.gu@baishancloud.com>
Date:   Wed Dec 26 14:58:15 2018 +0800

    Merge remote-tracking branch 'origin/master' into
    ORCHSYM-2845_upgrade_nifi_1.7.1

    Conflicts:
    	nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-api/src/main/java/org/apache/nifi/web/api/FlowResource.java

commit 00148bfbc886078047390150013c3f766dee59b5
Merge: d840546 b52c26f
Author: GU Guoqiang <guoqiang.gu@baishancloud.com>
Date:   Tue Dec 25 14:16:04 2018 +0800

    Merge remote-tracking branch 'origin/master' into
    ORCHSYM-2845_upgrade_nifi_1.7.1

    Conflicts:
    	nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-api/src/main/java/org/apache/nifi/web/api/AccessResource.java
    	nifi-nar-bundles/nifi-store-procedure-bundle/nifi-store-procedure-nar/pom.xml
    	nifi-nar-bundles/nifi-store-procedure-bundle/nifi-store-procedure-ui/pom.xml
    	nifi-nar-bundles/nifi-store-procedure-bundle/pom.xml

commit d84054635b36dc21304adcbe8f94bfa5b7a960ca
Author: GU Guoqiang <guoqiang.gu@baishancloud.com>
Date:   Mon Dec 17 15:25:46 2018 +0800

    不再打包NiFi

commit 8916739164bab75d86e72d92c9f6b06208bd2e68
Author: GU Guoqiang <guoqiang.gu@baishancloud.com>
Date:   Mon Dec 17 13:40:16 2018 +0800

    还原回1.7.1 版本原始内容

commit d5db8ede6a01f40f13e4ca7a465babdc79d88c94
Author: GU Guoqiang <guoqiang.gu@baishancloud.com>
Date:   Sun Dec 16 19:18:52 2018 +0800

    Fix the SNAPSHOT problem HBASE-20291 for json-smart

commit 34042f92